--- a/index.html
+++ b/index.html
@@ -15,7 +15,30 @@
 		<link href="https://fonts.googleapis.com/css?family=Mallanna|Source+Sans+Pro:300,400" rel="stylesheet">
 	</head>
 	<body>
-			
+		<div class="container">
+			<div class="panel panel-info">
+				<div class="panel-heading">
+					<h3 class="panel-title">Ordenamiento de la burbuja</h3>
+				</div>
+				<div class="panel-body">
+					<form>
+						<div class="form-group">
+							<label for="inputNumber">Digite un número:</label>
+							<input type="email" class="form-control" id="inputNumber">
+						</div>
+						<div class="btn-group btn-group-justified" role="group">
+							<div class="btn-group" role="group">
+								<button type="submit" class="btn btn-primary">INSERTAR</button>	
+							</div>
+							<div class="btn-group" role="group">
+								<button type="submit" class="btn btn-success">ORDENAR</button>
+							</div>
+						</div>						
+						<p></p>
+					</form>
+				</div>
+			</div>
+		</div>	
 		<!-- Minified javascript - JQuery  -->
 		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<!-- Minified javascript - Bootstrap -->
@@ -24,3 +47,5 @@
 		<script type="text/javascript" src="javascript/main.js"></script>
 	</body>
 </html>
+
+
