Implemented Add and Sort js functions

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 					<form>
 						<div class="form-group">
 							<label for="inputNumber">Digite un número:</label>
-							<input type="email" class="form-control" id="inputNumber">
+							<input id="inputNumber" name="inputNumber" type="number" class="form-control">
 						</div>
 						<div class="btn-group btn-group-justified" role="group">
 							<div class="btn-group" role="group">
-								<button type="submit" class="btn btn-primary">INSERTAR</button>	
+								<input type="submit" class="btn btn-primary" value="INSERTAR" id="addNumber">	
 							</div>
 							<div class="btn-group" role="group">
-								<button type="submit" class="btn btn-success">ORDENAR</button>
+								<input type="submit" class="btn btn-success" value="ORDENAR" id="sortNumber">
 							</div>
 						</div>						
-						<p></p>
+						<p id="list"></p>
 					</form>
 				</div>
 			</div>
