Update circle.yml file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!--  CSS de la página web -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<!--  Fonts  -->
-		<link href="https://fonts.googleapis.com/css?family=Mallanna|Source+Sans+Pro:300,400" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Mallanna%7CSource+Sans+Pro:300,400" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
